<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchHerz"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/herz" />

            <Switch
                android:id="@+id/switchKreuz"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/kreuz" />

            <Switch
                android:id="@+id/switchKaro"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/karo" />

            <Switch
                android:id="@+id/switchPik"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/pik" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch2bis6"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/zweiBisSechs" />

            <Switch
                android:id="@+id/switch7bis10"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/siebenBisZehn" />

            <Switch
                android:id="@+id/switchBubeBisAss"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/bubeBisAss" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>