<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluegray_900"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu"
        app:navigationIcon="@drawable/ic_baseline_dehaze_24"
        app:title="@string/app_name"
        app:titleTextColor="@color/black" />

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="586dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_nochnie"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_eher"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_bang"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_pferderennen"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_werbinich"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_maexchen"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_wuerfel"
                    android:textSize="12sp"
                    app:cornerRadius="25dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_wahrheit_pflicht"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_hoeher_tiefer"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_shithead"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_kingscup"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_busfahrer"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_einhundert"
                    android:textSize="12sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="80dp"
                    android:text="@string/btn_karten"
                    android:textSize="12sp"
                    app:cornerRadius="25dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="24dp"
    app:adSize="LARGE_BANNER"
    app:adUnitId="ca-app-pub-5545282755961898/8024751131"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="MissingConstraints"></com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>