<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluegray_900"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        ads:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:layout_column="0"
            app:layout_gravity="center|top"
            app:layout_row="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/spieler"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <ListView
                    android:id="@+id/spielerList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:layout_column="0"
            app:layout_gravity="center|top"
            app:layout_row="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextSchlucke"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/anzahlSchlucke"
                    android:inputType="number" />

                <RadioGroup
                    android:id="@+id/zeichenWahlB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:text="@string/herz"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radioButton2B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:text="@string/kreuz"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radioButton3B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:text="@string/karo"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radioButton4B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:text="@string/pik"
                        android:textAlignment="center" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/saveSpielerPferderennenButton"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/add"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:cornerRadius="20dp" />

                    <Button
                        android:id="@+id/openBearbeitenDialogButton"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="2"
                        android:text="Play"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        ads:cornerRadius="20dp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>